--- a/Sobre Messi.html
+++ b/Sobre Messi.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Historia de Messi</title>
+    <link rel="shortcut icon" href="10.png">
 </head>
 <body>
 <h1>Sobre Messi</h1>
-<p>Equipos en los que ha jugado</p>
+<h2>Infografía</h2>
+<p>Lionel Andrés Messi Cuccittini nació el 24 de junio de 1987 (36 años) en Rosario, Argentina. En su barrio corría el rumor que un niño de baja estatura era capaz de llevar el balón pegado a sus pies y anotar goles con una facilidad nunca antes vista. Hoy, con 1,69m de altura, el niño de Rosario es el futbolista con más títulos en la historia del fútbol.</p>
+<h2>Equipos en los que ha jugado</h2>
 <ul>
-    <li>Barcelona</li>
+    <li><i><a href="https://www.fcbarcelona.es/es/">Barcelona</a></i></li>
     <img src="barcelona.png" alt="Barcelona">
-    <a href="https://www.fcbarcelona.es/es/"></a>
-    <li>PSG</li>
+
+    <li><i><a href="https://es.psg.fr/">PSG</a></i></li>
     <img src="psg.png" alt="PSG">
-    <li>Miami</li>
+
+    <li><i><a href="https://es.intermiamicf.com/">Miami</a></i></li>
     <img src="miami.png" alt="Miami">
 
-
+<h2>Mejores goles de Messi</h2>
+    <video width="640" height="360" controls>
+        <source src="https://youtu.be/PMZy53PHbY0?feature=shared" type="video/mp4">
+        <source src="https://youtu.be/PMZy53PHbY0?feature=shared" type="video/webm">
+    </video>
 </ul>
 </body>
 </html>
